--- a/views/perbaikan_alat_daftar_mo.html
+++ b/views/perbaikan_alat_daftar_mo.html
@@ -9,7 +9,7 @@
         <a>Tables</a>
       </li>
       <li class="active">
-        <strong>Daftar Maintenance Planner</strong>
+        <strong>Daftar Maintenance Operation</strong>
       </li>
     </ol>
   </div>
@@ -22,7 +22,7 @@
     <div class="col-lg-12">
       <div class="ibox float-e-margins">
         <div class="ibox-title">
-          <h5>Daftar Maintenance Planner
+          <h5>Daftar Maintenance Operation
             <small>beserta statusnya</small>
           </h5>
           <div ibox-tools></div>
