--- a/views/perbaikan_alat_detail.html
+++ b/views/perbaikan_alat_detail.html
@@ -14,7 +14,7 @@
   </div>
 </div>
 <div class="wrapper wrapper-content">
-  <form class="form-horizontal" action="http://localhost:7777/tis/#/kpa/daftar_perbaikan_alat">
+  <form class="form-horizontal" action="#/kpa/daftar_perbaikan_alat">
     <div class="row">
       <div class="col-lg-12">
         <div class="ibox float-e-margins">
