--- a/views/perbaikan_alat_planner.html
+++ b/views/perbaikan_alat_planner.html
@@ -14,7 +14,7 @@
   </div>
 </div>
 <div class="wrapper wrapper-content">
-  <form class="form-horizontal" action="http://localhost:7777/tis/#/kpa/perbaikan_alat_daftar_mp">
+  <form class="form-horizontal" action="#/kpa/perbaikan_alat_daftar_mp">
     <div class="row">
       <div class="col-lg-12">
         <div class="ibox float-e-margins">
@@ -53,7 +53,7 @@
                 </div>
               </div>
 
-              <div class="col-md-4 b-r">
+              <div class="col-md-4">
 
                 <div class="form-group">
                   <div class="col-xs-4 text-right"><label>Tanggal</label></div>
@@ -63,50 +63,38 @@
                   <div class="col-xs-4 text-right"><label>Jam</label></div>
                   <div class="col-xs-8 text-left">08.15</div>
                 </div>
-
               </div>
-
-
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="ibox float-e-margins">
-          <div class="ibox-title">
-            <h5>Data Penunjang</h5>
-            <div ibox-tools></div>
-          </div>
-          <div class="ibox-content">
             <div class="row">
-              <div class="col-md-4 b-r">
+              <div class=""> <br> </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4 well">
                 <h3>Kerusakan</h3>
                 <div ng-model="demoModel">
                   Data kerusakan
                 </div>
               </div>
-              <div class="col-md-4 b-r">
+              <div class="col-md-4 well">
                 <h3>Penyebab</h3>
                 <div ng-model="demoModel">
                   Penyebab kerusakan pada alat
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 well">
                 <h3>Tindakan</h3>
                 <div ng-model="demoModel">
                   Tindakan yang akan dilakukan
                 </div>
               </div>
             </div>
+
           </div>
-          
         </div>
       </div>
     </div>
-    
+
+
     <div class="row">
       <div class="col-lg-12">
         <div class="ibox float-e-margins">
